--- a/WPFTest/WPFTest/Window1.xaml
+++ b/WPFTest/WPFTest/Window1.xaml
@@ -1,10 +1,9 @@
 ﻿<Window x:Class="WPFTest.Window1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Window1" Height="300" Width="300">
+        Title="Simple Binding" Height="300" Width="300">
     <StackPanel>
-        <TextBox x:Name="textBox1" BorderBrush="Red" Margin="5"/>
-        <TextBox x:Name="textBox2" BorderBrush="Blue" Margin="5" Text="{Binding Path=Text.Length,ElementName=textBox1,Mode=OneWay}"/>
-        <TextBox x:Name="textBox3" BorderBrush="Blue" Margin="5" Text="{Binding Path=Text.[3],ElementName=textBox1,Mode=OneWay}"/>
+        <TextBox x:Name="textBoxName" BorderBrush="Black" Margin="5"></TextBox>
+        <Button Content="Add age" Margin="5" Click="Button_Click"></Button>
     </StackPanel>
 </Window>
