--- a/WPFTest/WPFTest/App.xaml
+++ b/WPFTest/WPFTest/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="WPFTest.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="StyleTest2.xaml">
+             StartupUri="RoutedEventTest1.xaml">
     <Application.Resources>
          
     </Application.Resources>
