--- a/WPFTest/CommandTest/App.xaml
+++ b/WPFTest/CommandTest/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CommandTest"
-             StartupUri="CommandPrameterTest1.xaml">
+             StartupUri="CustomCommandTest.xaml">
     <Application.Resources>
          
     </Application.Resources>
