--- a/WPFTest/ResourceTest/App.xaml
+++ b/WPFTest/ResourceTest/App.xaml
@@ -1,7 +1,8 @@
-﻿<Application x:Class="BindingTest.App"
+﻿<Application x:Class="ResourceTest.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="CollectionBind.xaml">
+             xmlns:local="clr-namespace:ResourceTest"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
