--- a/WPFTest/AnimationAndPainting/App.xaml
+++ b/WPFTest/AnimationAndPainting/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="StyleTest.App"
+﻿<Application x:Class="AnimationAndPainting.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:StyleTest"
+             xmlns:local="clr-namespace:AnimationAndPainting"
              StartupUri="Window3.xaml">
     <Application.Resources>
          
