--- a/WPFTest/ControlTemplate/App.xaml
+++ b/WPFTest/ControlTemplate/App.xaml
@@ -3,5 +3,5 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ControlTemplate"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="ControlTemplate.App"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Window4.xaml">
 </Application>
