--- a/WPFTest/RoutedEventTest/App.xaml
+++ b/WPFTest/RoutedEventTest/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="CommandTest.App"
+﻿<Application x:Class="RoutedEventTest.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CommandTest"
-             StartupUri="Window3.xaml">
+             xmlns:local="clr-namespace:RoutedEventTest"
+             StartupUri="Window2.xaml">
     <Application.Resources>
          
     </Application.Resources>
