--- a/WPFTest/CommandTest/Window2.xaml
+++ b/WPFTest/CommandTest/Window2.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="CommandTest.CommandPrameterTest1"
+﻿<Window x:Class="CommandTest.Window2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CommandTest"
         mc:Ignorable="d"
-        Title="CommandPrameterTest1" Height="450" Width="800">
+        Title="Window2" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="24"/>
@@ -16,14 +16,13 @@
             <RowDefinition Height="4"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Text="Name:" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-        <TextBox x:Name="nameTextBox" Margin="60,0,0,0" Grid.Row="0"/>
+        <TextBlock Text="Name:" VerticalAlignment="Center"  HorizontalAlignment="Left" Grid.Row="0"/>
+        <TextBox x:Name="textBox" Margin="60,0,0,0" Grid.Row="0"/>
         <Button Content="New Teacher" Command="New" CommandParameter="Teacher" Grid.Row="2"/>
         <Button Content="New Student" Command="New" CommandParameter="Student" Grid.Row="4"/>
-        <ListBox x:Name="listBoxNewItems" Grid.Row="6"/>
+        <ListBox x:Name="listBoxItems" Grid.Row="6"/>
+        <Grid.CommandBindings>
+            <CommandBinding Command="New" CanExecute="CommandBinding_CanExecute" Executed="CommandBinding_Executed"/>
+        </Grid.CommandBindings>
     </Grid>
-    <Window.CommandBindings>
-        <CommandBinding Command="New" CanExecute="New_CanExecute"
-            Executed="New_Executed"></CommandBinding>
-    </Window.CommandBindings>
 </Window>
